--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   --textColor: hsl(0, 0%, 100%);
   --MainBg: hsl(222, 26%, 31%);
   --ToggleBg: hsl(224, 29%, 20%);
+  --equals: hsl(0, 0%, 100%);
   --outputDisplayScreen: hsl(224, 36%, 15%);
   --deleteAndReset: hsl(225, 21%, 49%);
   --deleteAndResetShadow: hsl(224, 28%, 35%);
@@ -23,6 +24,7 @@
   transition: 0.5s;
   --MainBg: hsl(222, 26%, 31%);
   --ToggleBg: hsl(224, 29%, 20%);
+  --equals: hsl(0, 0%, 100%);
   --outputDisplayScreen: hsl(224, 36%, 15%);
   --deleteAndReset: hsl(225, 21%, 49%);
   --deleteAndResetShadow: hsl(224, 28%, 35%);
@@ -37,11 +39,12 @@
   transition: 0.5s;
   --MainBg: hsl(0, 0%, 90%);
   --ToggleBg: hsl(0, 5%, 81%);
-  --outputDisplayScreen: hsl(0, 0%, 93%);
+  --equals: hsl(268, 71%, 12%);
+  --outputDisplayScreen: hsl(0, 3%, 74%);
   --deleteAndReset: hsl(185, 42%, 37%);
   --deleteAndResetShadow: hsl(185, 58%, 25%);
   --equalsBackground: hsl(25, 98%, 40%);
-  --equalsBackgroundShadow: hsl(25, 99%, 27%);
+  --equalsBackgroundShadow: hsl(25, 47%, 48%);
   --buttonBackground: hsl(45, 7%, 89%);
   --buttonBackgroundHover: hsl(45, 7%, 100%);
   --buttonBackgroundShadow: hsl(35, 11%, 61%);
@@ -52,6 +55,7 @@
   transition: 0.5s;
   --MainBg: hsl(268, 75%, 9%);
   --ToggleBg: hsl(268, 71%, 12%);
+  --equals: hsl(268, 71%, 12%);
   --outputDisplayScreen: hsl(281, 89%, 26%);
   --deleteAndReset: hsl(285, 91%, 52%);
   --deleteAndResetShadow: hsl(281, 89%, 26%);
@@ -80,7 +84,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: var(--MainBg);
+  /* background-color: var(--MainBg); */
   min-height: 100vh;
   flex-direction: column;
   justify-content: center;
@@ -91,6 +95,9 @@ main {
   width: clamp(25rem, calc(100% - 40px), 28rem);
   flex-direction: column;
   gap: 1rem;
+  background-color: var(--MainBg);
+  padding: 2.5rem 1.5rem;
+  border-radius: 1rem;
 }
 header {
   justify-content: space-between;
@@ -191,7 +198,7 @@ button:hover {
 .deleteAndReset {
   background-color: var(--deleteAndReset);
   box-shadow: 0px 5px var(--deleteAndResetShadow);
-  color: var(--ToggleBg);
+  color: var(--equals);
 }
 .deleteAndReset:hover {
   background-color: var(--deleteAndResetShadow);
@@ -200,7 +207,7 @@ button:hover {
 .equals {
   background-color: var(--equalsBackground);
   box-shadow: 0px 5px var(--equalsBackgroundShadow);
-  color: var(--ToggleBg);
+  color: var(--equals);
 }
 .equals:hover {
   background-color: var(--equalsBackground);
@@ -218,9 +225,9 @@ button:hover {
 .attribution {
   font-size: 11px;
   text-align: center;
-  color: var(--textColor);
+  color: var(--outputDisplayScreen);
 }
 
 .attribution a {
-  color: var(--textColor);
+  color: var(--outputDisplayScreen);
 }
